fix 修复文件表中挂载id没能正确记录和读取的问题